# collects

./: .gitattrubutes  .gitignore  .pattern-checks.json  .typos.toml  AGENTS.md  Cargo.toml  DEPLOYMENT.md  DOCKER_IMAGE_CLEANUP.md  Dockerfile  ENVIRONMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_FIX_ARTIFACT_CLEANUP.md  README.md  TODO.md  index.html  justfile  lefthook.yml  package.json  pnpm-lock.yaml  sgconfig.yml  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.sqlx/: query-048cf71a87443d5538ffdb34d09640a12f6b82a8da1b5f1fd27f7e852651338d.json  query-0ab6c3e4fa85c4ccd371dd3ee6cb8b36a5a38c742d3e4638acaf5b620139dbdb.json  query-0d3ffe8a8973fa3a324516c855006c605d3e6d19f997085dfd4852390ad06119.json  query-0dee02581f9abb080504fdc0474ec44f9e904e62a5cb263dd23937c1ca71dcb3.json  query-0f96ff3b3d86afe8d93d79bf5c553ce565c7eb51cd1bd02a6cfab3df9ce82dcc.json  query-130b428ee63a704e95670ed2d17450d57b73521eb884b0307fc01ff166252804.json  query-13126bae94c7e6e8c3e9b5d1f5570b3ca674568be09652b441abcff21485049a.json  (+58 more)
app/: Cargo.toml  README.md  deno.json  how-auth-worked.md  index.html  mod.just  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  worker-configuration.d.ts  wrangler.toml
app/auth/: .gitignore  auth.ts  index.html  signup.html  signup.ts
app/src/: app.rs  lib.rs  main.rs  worker.ts
app/src/components/: mod.rs
app/src/effects/: is_api_health.rs  mod.rs
app/src/signals/: is_api_health.rs  mod.rs
app/src/utils/: effects.rs  mod.rs  signals.rs
app/src/widgets/: api_status.rs  mod.rs
assets/: Cargo.toml  build.rs
assets/src/: icon.rs  lib.rs
auth/: .prettierignore  .prettierrc.json  mod.just  (+9 more)
business/: Cargo.toml  build.rs
business/src/: api_status.rs  auth_state.rs  cf_token_compute.rs  clipboard_compute.rs  config.rs  content.rs  content_tests.rs  create_user_compute.rs  env.rs  fetch_service.rs  fetch_state.rs  fetch_users_compute.rs  http.rs  image_diag.rs  internal.rs  internal_api.rs  internal_api_status.rs  internal_users.rs  lib.rs  list_content.rs  list_groups.rs  login_state.rs  route.rs  test_utils.rs  tests.rs  version_info.rs
business/src/internal_users/: action_compute.rs  api.rs  list_users_compute.rs  mod.rs  state.rs  workflow_commands.rs
business/tests/: login_state_tests.rs
cli/: Cargo.toml  mod.just
cli/src/: auth.rs  cli.rs  clipboard.rs  config.rs  context.rs  main.rs  output.rs  terminal.rs  timing.rs  utils.rs
cli/src/commands/: add.rs  completions.rs  list.rs  login.rs  mod.rs  new.rs  schema.rs  view.rs
cli/tests/: cli_commands_test.rs
clipboard/: Cargo.toml
clipboard/src/: lib.rs
input/: Cargo.toml
input/src/: clipboard.rs  lib.rs  stdin.rs
services/: API_TODO.md  Cargo.toml  README.md  ZERO_TRUST.md  build.rs  mod.just
services/docs/: collect-files.md  storage.md
services/migrations/: .checksums.json  20251007093318_init.sql  20251226105821_init-auth-storage.sql  20260107102609_add-storage-routing-to-contents.sql  20260108080436_add-uuid-v7-support.sql  20260109101346_add-text-content-support.sql  20260109113800_add-revoked-tokens.sql  README.md
services/res/: scalar.html
services/src/: auth.rs  config.rs  database.rs  internal.rs  lib.rs  main.rs  openapi.rs  storage.rs  telemetry.rs
services/src/collect_files/: mock.rs  mod.rs  storage.rs  traits.rs  types.rs
services/src/collects/: mod.rs
services/src/storage/: cloudflare.rs  gcs.rs  mock.rs  mod.rs  presign.rs  traits.rs  types.rs
services/src/tags/: mod.rs  storage.rs
services/src/users/: mod.rs  otp.rs  revocation_cache.rs  routes.rs  session_auth.rs  storage.rs
services/src/v1/: content_tags.rs  contents.rs  groups.rs  me.rs  mod.rs  public.rs  share_links.rs  tags.rs  types.rs  uploads.rs
services/tests/: gateway_integration.rs  health_check.rs  internal_create_user_zerotrust_test.rs  service_tests.rs  share_links_test.rs  v1_contents_text_test.rs  zero_trust_integration_test.rs
services/tests/common/: mod.rs
states/: Cargo.toml
states/src/: basic_state.rs  clipboard_image.rs  compute.rs  ctx.rs  dep.rs  enum_states.rs  error.rs  graph.rs  lib.rs  register_state.rs  register_state_id.rs  runtime.rs  snapshot.rs  state.rs  state_sync_status.rs  task.rs
ui/: .gitignore  Cargo.toml  build.rs  how-auth-worked.md  index.html  mod.just  package-lock.json  package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.internal.toml  wrangler.nightly.toml  wrangler.pr.toml  wrangler.test-internal.toml  wrangler.test.toml  wrangler.toml
ui/e2e_tests/: e2e_internal_happy_path.rs  e2e_login_happy_path.rs
ui/e2e_tests/common/: mod.rs
ui/src/: app.rs  env.rs  lib.rs  logger.ts  main.rs  state.rs  worker.ts
ui/src/pages/: home_page.rs  internal_page.rs  login_page.rs  mod.rs
ui/src/utils/: clipboard.rs  colors.rs  drop_handler.rs  file_picker.rs  fonts.rs  image_data.rs  mod.rs  paste_handler.rs
ui/src/widgets/: api_status.rs  env_version.rs  footer.rs  image_diag.rs  image_preview.rs  internal_api_status.rs  internal_users.rs  login.rs  mod.rs  signin_button.rs
ui/src/widgets/internal/: internal_api_status.rs  internal_users.rs  mod.rs
ui/src/widgets/internal/users/: api.rs  mod.rs  modals.rs  panel.rs  qr.rs  state.rs
ui/src/widgets/internal/users/table/: cells.rs  columns.rs  header.rs  mod.rs  row.rs
ui/tests/: api_status_integration.rs  api_status_interval_test.rs  api_status_toggle_test.rs  auto_fetch_users_integration.rs  create_user_integration.rs  e2e_login_test.rs  image_diag_integration.rs  image_drop_integration.rs  image_paste_integration.rs  initial_users_fetch_test.rs  internal_users_auto_load_test.rs  login_integration.rs  login_verify_otp_integration.rs  otp_cycle_refresh_integration.rs  otp_reveal_refresh_integration.rs  otp_time_remaining_test.rs  otp_zero_time_remaining_no_infinite_refresh.rs  profile_update_integration.rs  qrcode_display_integration.rs  signin_integration.rs  snapshot_test.rs  token_validation_integration.rs  user_management_integration.rs
ui/tests/common/: mod.rs
(+115 files in other folders)
