[package]
name = "collects-app"
version = "0.1.0"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
ehttp = { workspace = true }
flume = { workspace = true }
chrono = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
log = "0.4.27"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
