[package]
name = "collects-business"
version = "0.1.0"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true}
reqwest = { workspace = true }
serde = { workspace = true }
serde-env = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ehttp = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
ustr = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

collects-states = { path = "../states" }

[build-dependencies]
chrono = "0.4.42"

[features]
env_test = []
env_pr = []
env_internal = []
env_nightly = []
