[package]
name = "collects-business"
version = "0.1.0"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true}
reqwest = { workspace = true }
serde = { workspace = true }
serde-env = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ehttp = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
ustr = { workspace = true }

collects-states = { path = "../states" }
collects-utils = { path = "../utils" }

[build-dependencies]
chrono = "0.4.42"

[features]
env_test = ["collects-utils/env_test"]
env_test_internal = ["collects-utils/env_test_internal"]
env_pr = ["collects-utils/env_pr"]
env_internal = ["collects-utils/env_internal"]
env_nightly = ["collects-utils/env_nightly"]
