[package]
name = "collects-business"
version = "0.1.0"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
flume = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-env = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
ustr = { workspace = true }
egui = { workspace = true }
tokio-util = { workspace = true }

collects-states = { path = "../states" }
collects-utils = { path = "../utils" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Do NOT pull Tokio default features on wasm32 (default includes `net` → mio, which is unsupported).
tokio = { workspace = true, default-features = false, features = ["sync", "macros"] }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
chrono = "0.4.42"

[features]
env_test = ["collects-utils/env_test"]
env_test_internal = ["collects-utils/env_test_internal"]
env_pr = ["collects-utils/env_pr"]
env_internal = ["collects-utils/env_internal"]
env_nightly = ["collects-utils/env_nightly"]
