[package]
name = "collects-input"
version = "0.1.0"
edition = "2024"
description = "Input sources for collects: clipboard, stdin, and other content ingestion"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# Native clipboard support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "3.6", features = ["wayland-data-control", "image-data"] }
image = "0.25"
urlencoding = "2.1"

[features]
default = []

[lints]
workspace = true
