[package]
name = "collects-services"
version = "2026.1.2"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]

[features]
default = []

[dependencies]
anyhow = { workspace = true}
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
opendal = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-env = { workspace = true }
sha2 = { workspace = true }
foyer = { workspace = true }
ipnet = "2.11"
tower = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio  = { workspace = true, features = ["full"] }
tracing  = { workspace = true }
tracing-subscriber  = { workspace = true }
tracing-stackdriver = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
mimalloc = { workspace = true }
totp-rs = { version = "5.7.0", features = ["otpauth", "gen_secret"] }
collects-utils = { path = "../utils" }
uuid = { workspace = true }
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
nanoid = "0.4"

[dev-dependencies]
axum-test = "18.1.0"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
time = { version = "0.3", features = ["std"] }

[build-dependencies]
chrono = "0.4.42"
