[package]
name = "collects-states"
version = "0.1.0"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
flume = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
ustr = { workspace = true }
chrono = { workspace = true }
