[package]
name = "collects-states"
version = "0.1.0"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tokio-util = { workspace = true }
ustr = { workspace = true }
