[package]
name = "collects-states"
version = "0.1.0"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
chrono = { workspace = true }
flume = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Do NOT pull Tokio default features on wasm32 (default includes `net` → mio, which is unsupported).
tokio = { workspace = true, default-features = false, features = ["rt", "sync", "macros"] }

tokio-util = { workspace = true }
ustr = { workspace = true }
wasm-bindgen-futures = { workspace = true }
