[package]
name = "collects-ui"
version = "2026.1.2"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { workspace = true }
egui_extras = { workspace = true }
ehttp = { workspace = true }
flume = { workspace = true }
chrono = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
qrcode = "0.14"
ustr = { workspace = true }
collects-business = { path = "../business" }
collects-states = { path = "../states" }
# eframe with all rendering backends and platform support
# Following best practice: single eframe dependency with all features
eframe = { workspace = true, features = [
    "glow",          # OpenGL rendering backend (for web/fallback)
    "wgpu",          # WebGPU/Vulkan/Metal/DX12 rendering backend (for native)
    "wayland",       # Wayland windowing support (Linux)
] }
# Enable wgpu GPU backends for all platforms
wgpu = { version = "*", features = [
    "vulkan",        # Vulkan backend (Linux, Windows, Android)
    "metal",         # Metal backend (macOS, iOS)
    "dx12",          # DirectX 12 backend (Windows)
    "webgpu",        # WebGPU backend (web)
    "webgl",         # WebGL backend (web fallback)
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
mimalloc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, default-features = true }
arboard = { version = "3.6", features = ["wayland-data-control", "image-data"] }
image = "0.25"
urlencoding = "2.1"
rfd = "0.16"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
kittest = "0.3"
wiremock = "0.6"
egui_kittest = { version = "0.33", features = ["snapshot", "eframe"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3.15"

[build-dependencies]
ico = "0.3"
image = "0.25"
embed-resource = "2.4"

[features]
env_test = ["collects-business/env_test"]
env_test_internal = ["collects-business/env_test_internal"]
env_internal = ["collects-business/env_internal"]
env_nightly = ["collects-business/env_nightly"]
env_pr = ["collects-business/env_pr"]
