[package]
name = "collects-ui"
version = "2026.1.2"
authors = ["BoWen Chai <chaibowen.i@gmail.com>"]
edition = "2024"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { workspace = true }
egui_extras = { workspace = true }
flume = { workspace = true }
chrono = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bon = "3"
qrcode = "0.14"
ustr = { workspace = true }
collects-business = { path = "../business" }
collects-states = { path = "../states" }
# eframe with all rendering backends and platform support
# Following best practice: single eframe dependency with all features
eframe = { workspace = true, features = [
    "glow",          # OpenGL rendering backend (for web/fallback)
    "wgpu",          # WebGPU/Vulkan/Metal/DX12 rendering backend (for native)
    "wayland",       # Wayland windowing support (Linux)
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
mimalloc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, default-features = true }
arboard = { version = "3.6", features = ["wayland-data-control", "image-data"] }
image = "0.25"
urlencoding = "2.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.25", default-features = false }
# Enable webgl feature on wgpu for WASM target
wgpu = { version = "27.0.1", features = ["webgl"] }

[dev-dependencies]
kittest = "0.3"
egui_kittest = { version = "0.33", features = ["snapshot", "eframe"] }

# `wiremock` pulls in `hyper`/`tokio`/`mio` via the Tokio network stack, which is not supported
# on `wasm32-unknown-unknown`. Keep it (and Tokio test utilities) for native-only test builds.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full", "test-util"] }

[build-dependencies]
ico = "0.3"
image = "0.25"
embed-resource = "2.4"

[features]
env_test = ["collects-business/env_test"]
env_test_internal = ["collects-business/env_test_internal"]
env_internal = ["collects-business/env_internal"]
env_nightly = ["collects-business/env_nightly"]
env_pr = ["collects-business/env_pr"]
